// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnomalyDetectorTrigger feature has priority over preview error 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="euiLoadingContent"
            >
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
            </span>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnomalyDetectorTrigger renders error 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="euiLoadingContent"
            >
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
            </span>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnomalyDetectorTrigger renders no detector id 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%; display: flex; align-items: center; justify-content: center;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <div
              class="euiText euiText--medium"
            >
              You must specify a detector.
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnomalyDetectorTrigger renders no enabled feature 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="euiLoadingContent"
            >
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
            </span>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnomalyDetectorTrigger renders no feature 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="euiLoadingContent"
            >
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
            </span>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnomalyDetectorTrigger renders preview sparse data 1`] = `
<div>
  <div
    style="padding: 0px 10px;"
  >
    <div
      style="border-radius: 5px; padding: 10px; border: 1px solid #d9d9d9; height: 250px; width: 100%;"
    >
      <div
        class="euiEmptyPrompt"
        style="max-width: 45em;"
      >
        <span
          class="euiTextColor euiTextColor--subdued"
        >
          <div
            class="euiText euiText--medium"
          >
            <span
              class="euiLoadingContent"
            >
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
              <span
                class="euiLoadingContent__singleLine"
              >
                <span
                  class="euiLoadingContent__singleLineBackground"
                />
              </span>
            </span>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
